Separated less files and fixed some issues.
	-Separated video-tabs.less.
	-Fixed extra space issue at the bottom of the footer.
	-Modified videoinfo template.

--- a/css/videoPlayer/videopage-styles.less
+++ b/css/videoPlayer/videopage-styles.less
@@ -25,7 +25,7 @@
 					background-color : white;
 					color            : black;
 				}
-				#info {
+				#info-icon {
 						cursor         : pointer;
 						color          : #3dadef;
 						vertical-align : middle;
